--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "sqlite3": "^5.1.4",
