--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/glob": "^8.0.1",
     "@types/livereload": "^0.9.2",
     "@types/node": "^18.11.18",
+    "@types/sqlite3": "^3.1.8",
     "connect-livereload": "^0.6.1",
     "glob": "^8.1.0",
     "livereload": "^0.9.3",
